<resources>
    <string name="app_name">SecureLine</string>
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="account">Account</string>
    <string name="worry">No more worries!</string>
    <string name="p">Payment</string>
    <string name="set">Settings</string>
    <string name="log">Logout</string>
    <string name="tr">Transactions</string>
    <string name="menu">Menu</string>
    <string name="welcome">Hello There!</string>
    <string name="image">image</string>
    <string name="noti">Notification</string>
    <string name="ac">Account details</string>
    <string name="arrow">arrow</string>
    <string name="send">Transfer</string>
    <string name="tp">Topup</string>
    <string name="rc">Request</string>
    <string name="mpesa_payment">Payment</string>
    <string name="phone">Your Phone Number</string>
    <string name="amount">Enter Amount</string>
    <string name="mobilen">Enter Your Mobile Number to get started</string>
    <string name="digits">0712345678</string>
    <string name="next">next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seaw">SEND $ ANYWHERE ANYTIME</string>
    <string name="k">Ksh ..</string>
    <string name="pd">per day</string>
    <string name="raa">REQUEST $ ANYWHERE ANYTIME</string>
    <string name="tc">Latest Transactions</string>
    <string name="nos">X_X_X_X_X_X</string>
    <string name="data">Kindly enter the following details to continue </string>
    <string name="name">Last Name</string>
    <string name="ds">Dwight Schrute</string>
    <string name="mn">Mobile Number</string>
    <string name="mail">Email</string>
    <string name="dse">dwightschrute@gmail.com</string>
    <string name="cry">Create your account or log back in</string>
    <string name="weltext">We meet again!</string>
    <string name="logi"> Log in </string>
    <string name="reg">SignUp</string>
</resources>