<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".screens.PaymentFragment">

    <TextView
        android:padding="16dp"
        android:layout_marginTop="29dp"
        android:textColor="#3f9dff"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mpesa_payment"
        android:fontFamily="@font/sfheavy"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_margin="10dp"
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:textColor="#3f9dff"
        android:fontFamily="@font/sfheavy"
        android:layout_height="wrap_content"
        android:autofillHints="@string/amount" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="number"
        android:id="@+id/amount"
        android:layout_margin="10dp"
        android:hint="@string/amount"
        android:textColor="#3f9dff"
        android:fontFamily="@font/sfsemibold"
        android:layout_height="wrap_content"
        android:autofillHints="@string/amount" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:background="@drawable/bg_header"
        android:textColor="#3f9dff"
        android:fontFamily="@font/sfheavy"
        android:id="@+id/pay"
        android:enabled="false"
        android:layout_margin="10dp" />

</LinearLayout>