<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    tools:context=".user.RegisterActivity">


    <LinearLayout
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textmobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/sfbold"
            android:text="@string/mobilen"
            android:textColor="?android:textColorPrimary"
            android:textSize="23sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/mobiledigit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/digits"
                android:fontFamily="@font/sfbold"
                android:hint="@string/digits"
                android:inputType="phone"
                android:drawableEnd="@drawable/ic_phoneblack"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:background="@color/purple_500"
        android:elevation="1dp"
        android:fontFamily="@font/sfbold"
        android:gravity="center_horizontal"
        android:paddingTop="18.5dp"
        android:paddingBottom="18.5dp"
        android:text="@string/next"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp" />

</RelativeLayout>