<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="256dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="150dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23.2dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23.2dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/sfsemibold"
                    android:letterSpacing="0.0325"
                    android:textColor="#3f9dff"
                    android:text="@string/data"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/sfmedium"
                    android:letterSpacing="0.0325"
                    android:text="@string/name"
                    android:textColor="#3f9dff"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/first_name"
                    android:layout_marginBottom="13.5dp"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/sfregular"
                    android:letterSpacing="0.0325"
                    android:hint="@string/ds"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfmedium"
                    android:letterSpacing="0.0325"
                    android:text="Last name"
                    android:textColor="#3f9dff"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/last_name"
                    android:layout_marginBottom="13.5dp"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/sfregular"
                    android:letterSpacing="0.0325"
                    android:hint="Schrute"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/sfmedium"
                    android:letterSpacing="0.0325"
                    android:text="@string/mn"
                    android:textColor="#3f9dff"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:inputType="phone"
                    android:id="@+id/user_mobile"
                    android:fontFamily="@font/sfregular"
                    android:letterSpacing="0.0325"
                    android:hint="@string/digits"
                    android:textColor="?android:textColorPrimary"
                    android:background="@android:color/transparent"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/sfmedium"
                    android:letterSpacing="0.0325"
                    android:text="@string/mail"
                    android:textColor="#3f9dff"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:id="@+id/user_email"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sfregular"
                    android:letterSpacing="0.0325"
                    android:textColor="?android:textColorPrimary"
                    android:hint="@string/dse"
                    android:textSize="18.3sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15.5dp"
                    android:fontFamily="@font/sfmedium"
                    android:letterSpacing="0.0325"
                    android:text="Passcode"
                    android:textColor="#3f9dff"
                    android:textSize="18.7sp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13.5dp"
                    android:layout_marginTop="7dp"
                    android:id="@+id/user_passcode"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sfregular"
                    android:letterSpacing="0.0325"
                    android:textColor="?android:textColorPrimary"
                    android:hint="******"
                    android:inputType="textPassword"
                    android:textSize="18.3sp" />

                <TextView
                    android:textSize="19sp"
                    android:id="@+id/tv_updateuserdetail"
                    android:background="@color/purple_200"
                    android:textAllCaps="true"
                    android:paddingTop="16.3dp"
                    android:paddingBottom="16.3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:text="@string/next"
                    android:textColor="?android:textColorPrimary"
                    android:fontFamily="@font/sfmedium"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>