<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.AccountFragment">


    <TextView
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sfbold"
        android:letterSpacing="0.0325"
        android:gravity="center"
        android:text="@string/ac"
        android:textColor="#3f9dff"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/account"
        android:layout_below="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:src="@drawable/accountt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="182dp"
                android:fontFamily="@font/sfbold"
                android:text="@string/account"
                android:textColor="#3f9dff"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_below="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:src="@drawable/settings"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="183dp"
                android:fontFamily="@font/sfbold"
                android:text="@string/set"
                android:textColor="#3f9dff"
                android:textSize="16sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transactions"
        android:layout_below="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:src="@drawable/transactio"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:fontFamily="@font/sfbold"
                android:text="@string/tr"
                android:textColor="#3f9dff"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_below="@+id/transactions"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/bg_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:src="@drawable/signouu"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="190dp"
                android:fontFamily="@font/sfbold"
                android:text="@string/log"
                android:textColor="#3f9dff"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>