<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ProgressBar
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressbar"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="256dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="150dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="23.2dp">



                <TextView
                    android:padding="16dp"
                    android:layout_marginTop="29dp"
                    android:textColor="#3f9dff"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mpesa_payment"
                    android:fontFamily="@font/sfheavy"
                    android:textSize="17sp" />


                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_margin="10dp"
                    android:hint="@string/phone"
                    android:textColor="#3f9dff"
                    android:fontFamily="@font/sfheavy"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/amount" />


                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_margin="10dp"
                    android:hint="@string/amount"
                    android:textColor="#3f9dff"
                    android:fontFamily="@font/sfsemibold"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/amount" />



                <Button
                    android:id="@+id/btnPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pay Now"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/etAmount"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="139dp" />



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_nav" />
</RelativeLayout>
